--- a/about.html
+++ b/about.html
@@ -20,9 +20,12 @@
     <h1>about</h1>
     <p>
 		I'm Julian Triveri, a
-		full-time research software engineer at the 
+		full-time tech artist at the 
 		<a href="https://www.rcac.purdue.edu/envision">Purdue Envision Center</a>
 		and a part-time undergrad at Purdue University in the US.
+		I'm a capable high-level programmer, 3D modeler, VR UX designer, and cellist. 
+		I'm still a fledgling low-level / graphics programmer. 
+		I wear many hats and I'm always looking for new ones to try on.
 	</p>
 	
 	<p>
@@ -35,12 +38,8 @@
     </p>
 	
 	<p>
-		I have experience in real-time 3D art, basic animation, 
-		and scripting / high-level programming, and I'm currently 
-		exploring graphics and lower-level programming.
-		I like wearing multiple hats 
-		and I'm always looking for new ones to try on.
-    </p>
+		I try to stay unpretentious, concise, and direct.
+	</p>
 	
 	<!-- <br>
 	<p>
