--- a/portfolio/virtuallab/tbexport.html
+++ b/portfolio/virtuallab/tbexport.html
@@ -9,10 +9,10 @@
 <body style="margin:0; padding:0; overflow:hidden;">
     <script>
 	
-		// marmoset.largeUI = true;
+		marmoset.largeUI = true;
 		// marmoset.transparentBackground = true;
 		
-		// marmoset.noUserInterface = true;
+		//marmoset.noUserInterface = false;
 		
 		var viewer = marmoset.embed('tbexport.mview', { fullFrame: true });
 		
