--- a/portfolio/virutallab.html
+++ b/portfolio/virutallab.html
@@ -162,9 +162,9 @@
 	
 	<p> 
 		Mesh updates are extremely expensive according to my profiling.
-		Instead of a mesh cylinder, I use a flat ribbon
-		with a cylindrical normal texture to minimize the vertices Obi needs to move. 
-		I eventually want to add end cap vertices for a better cylinder look.
+		Instead of a cylindrical cable mesh, I use a flat ribbon mesh
+		with cylindrical normals to minimize the vertices Obi needs to move. 
+		I want to eventually add end cap vertices for a better cylinder look.
 	</p>
 	
 	<a href="virtuallab/cables.png" target="_blank"><img src="virtuallab/cables.png"></a>
@@ -172,9 +172,8 @@
 	<p>
 		I randomize cable colors so users can keep track of
 		what is connected to what.
-		All the cables use a single material and I change the vertex
-		colors on cable meshes when they spawn.
-		
+		All the cables use the same material, but I change the vertex
+		colors of cable meshes when they spawn.
 	</p>
 	
 	<a href="virtuallab/dither.png" target="_blank"><img src="virtuallab/dither.png"></a>
