update vlab 3d view

--- a/portfolio/virtuallab/tbexport.html
+++ b/portfolio/virtuallab/tbexport.html
@@ -9,7 +9,7 @@
 <body style="margin:0; padding:0; overflow:hidden;">
     <script>
 	
-		marmoset.largeUI = true;
+		// marmoset.largeUI = true;
 		// marmoset.transparentBackground = true;
 		
 		//marmoset.noUserInterface = false;
@@ -26,8 +26,8 @@
 			};
 		})(); */
 		
-		viewer.loadScene();
-		viewer.stripData.selectedStrip = 4;
+		// viewer.loadScene();
+		// viewer.stripData.selectedStrip = 4;
 		viewer.wake();
     </script>
 	
