--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	
     <div class="circlesPacked">
 
-        <a class="packedCircle" href="/portfolio/virutallab.html">
+        <a class="packedCircle" href="/portfolio/virtuallab.html">
 			<video class="thumbnail" autoplay muted playsinline loop src="/portfolio/virtuallab/thumb.mp4"></video>
 			
 			<div class="thumbnail thumbtext">
