--- a/about.html
+++ b/about.html
@@ -22,17 +22,20 @@
 		I'm Julian Triveri, a
 		full-time tech artist at the 
 		<a href="https://www.rcac.purdue.edu/envision">Purdue Envision Center</a>
-		and a part-time undergrad at Purdue University in the US.
+		and a part-time undergrad at Purdue University in the US. 
+		I wear many hats and I'm always looking for new ones to try on.
 	</p>
 	<p>
-		I'm a capable high-level programmer, 3D modeler, VR UX designer, and cellist. 
+		I'm a capable high-level programmer, 3D modeler, and cellist. 
 		I'm still a fledgling low-level / graphics programmer. 
-		I wear many hats and I'm always looking for new ones to try on.
+		I do a lot of stuff with VR.
 	</p>
 	
 	<p>
 		I believe that form should always follow function,
 		but I still have a keen interest in design and aesthetics.
+	</p>
+	<p>
 		I like creating unexpectedly refined visuals for 
 		performance-constrained platforms such as web and mobile VR. 
 		Working within constraints requires a more human touch
